@@ -79,6 +79,8 @@
      ...sizeof(&adat.session) is not good here.
      henning@, deraadt@, millert@
  - (djm) Add new object files to Makefile and reorder
+ - (djm) Bug #501: gai_strerror should return char*; 
+   fix from dtucker@zip.com.au
 
 20030211
  - (djm) Cygwin needs libcrypt too. Patch from vinschen@redhat.com
@@ -1179,4 +1181,4 @@
      save auth method before monitor_reset_key_state(); bugzilla bug #284;
      ok provos@
 
-$Id: ChangeLog,v 1.2616 2003/02/24 01:18:46 djm Exp $
+$Id: ChangeLog,v 1.2617 2003/02/24 01:35:08 djm Exp $
